# callchain-checker

./: CMakeLists.txt  MANIFEST.in  README.md  build_python_wheel_docker.sh  build_python_wheel_local.sh  mypy.ini  setup.cfg  setup.py.in
.github/workflows/: test-python.yaml
python_src/callchain_checker/: callchain_checker.py  ccc
python_src/callchain_checker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python_src/test/: callchain_test.py
src/: CMakeLists.txt
