[metadata]
name = callchain-checker
version = 0.0.3
author = Theodoros Theodoridis
author_email = theodort@inf.ethz.ch
description = A C/C++ code callchain checker
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/callchain-checker

classifiers =
    Programming Language :: Python :: 3



[options]
packages=find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    diopter >= 0.0.9

[options.packages.find]
where=python_src

[flake8]
max-line-length = 88
extend-ignore = E203
